# soundpipe-rs

./: Cargo.toml  README.md  TODO.md  build.rs
examples/: blsaw.rs  midi_synth.rs  minimal.rs
soundpipe_derive/: Cargo.toml
soundpipe_derive/src/: lib.rs
src/: factory.rs  lib.rs  soundpipe.rs
src/ffi/: ffi-generated.rs  mod.rs  wrapper.h
src/ugens/: mod.rs  port.rs  ugen.rs
src/ugens/effects/: mod.rs  revsc.rs
src/ugens/envelopes/: adsr.rs
src/ugens/filter/: mod.rs  wp_korg_35.rs
src/ugens/oscillators/: bl_saw.rs  bl_square.rs  common.rs  mod.rs
