[package]
name = "soundpipe"
version = "0.1.0"
authors = ["Marco Stahl <shybyte@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"
links = "soundpipe"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
midir = { git = "https://github.com/shybyte/midir" }
midi-message = { git = "https://github.com/shybyte/midi-message-rs" }
cpal = "0.12.1"
anyhow = "1.0.31"